--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha01'
 
     // retrofit and okhttp
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
