--- a/photopicker/src/main/AndroidManifest.xml
+++ b/photopicker/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.unsplash.pickerandroid.photopicker">
+          package="com.github.basshelal.unsplashpicker">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
-    <application>
-
-    </application>
 
 </manifest>
