Update gradle wrapper and compile target to JVM 1.8

--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.basshelal'
+group = 'com.github.basshelal'
 
 android {
     compileSdkVersion 29
@@ -24,6 +24,10 @@ android {
         experimental = true
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     kotlinOptions {
         jvmTarget = "1.8"
     }
