--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
 }
