--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'me.saket:flick:1.7.0'
+    implementation 'me.everything:overscroll-decor-android:1.0.4'
 
     // test
     testImplementation 'junit:junit:4.12'
