--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.core:core-ktx:1.2.0-beta01'
+    implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
     // retrofit and okhttp
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
