--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -41,10 +41,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.core:core-ktx:1.2.0-beta01'
+    implementation 'androidx.core:core-ktx:1.2.0-beta02'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
-    // retrofit and okhttp
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.14'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // retrofit, okhttp and moshi
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
@@ -62,6 +66,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'me.everything:overscroll-decor-android:1.0.4'
+    implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.6'
 
     // test
     testImplementation 'junit:junit:4.12'
