--- a/photopicker/src/main/AndroidManifest.xml
+++ b/photopicker/src/main/AndroidManifest.xml
@@ -3,5 +3,6 @@
           package="com.github.basshelal.unsplashpicker">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
